--- a/index.html
+++ b/index.html
@@ -12,7 +12,31 @@
 </head>
 
 <body>
-
+    <header class="main-head">
+        <nav>
+            <h1 id="logo">Elena Joy</h1>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Work</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="hero-intoduction flex">
+                <h2>Elena Joy <br> Photography</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima labore praesentium eos mollitia quia
+                    similique veritatis magni libero, quae numquam.</p>
+                <a href="#gallery">Gallery</a>
+            </div>
+            <div class="hero-images">
+                <img class="hero-elena" src="./img/elena-joy.png" alt="picture of elena joy">
+                <img src="./img/plant1.png" alt="" class="plant plant1">
+                <img src="./img/plant2.png" alt="" class="plant plant2">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
