--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <img src="./img/plant2.png" alt="" class="plant plant2">
             </div>
         </section>
+        <div></div>
     </main>
 </body>
 
