--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
     <header class="main-head">
         <nav>
             <h1 id="logo">Elena Joy</h1>
+            <input type="checkbox" class="menue-check">
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <div class="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </nav>
     </header>
     <main>
@@ -36,7 +42,6 @@
                 <img src="./img/plant2.png" alt="" class="plant plant2">
             </div>
         </section>
-        <div></div>
     </main>
 </body>
 
