--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
                 <img src="./img/plant2.png" alt="" class="plant plant2">
             </div>
         </section>
+
+        <section class="about">
+            <div class="about-image">
+                <h3>MINIMAL</h3>
+                <img src="./img/about-image.png" alt="portrait-picture">
+            </div>
+            <div class="about-text flex">
+                <h3>Elena Joy</h3>
+                <div class="about-life">
+                    <h2>My Life</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam, autem necessitatibus numquam magnam quasi sunt mollitia.</p>
+                </div>
+                <div class="about-work">
+                    <h2>My Work</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam, autem necessitatibus numquam magnam quasi sunt mollitia.</p>
+                </div>
+                <div class="about-contact">
+                    <h2>Contact</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam, autem necessitatibus numquam magnam quasi sunt mollitia.</p>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
