--- a/index.html
+++ b/index.html
@@ -64,6 +64,13 @@
                 </div>
             </div>
         </section>
+
+        <section class="gallery">
+            <img src="./img/gallery-1.jpg" alt="man in suit" class="gallery1">
+            <img src="./img/gallery-2.jpg" alt="lady in coat" class="gallery2">
+            <img src="./img/gallery-3.jpg" alt="lady in tshirt" class="gallery3">
+            <img src="./img/gallery-4.jpg" alt="lady in jacket" class="gallery4">
+        </section>
     </main>
 </body>
 
