--- a/index.html
+++ b/index.html
@@ -52,15 +52,18 @@
                 <h3>Elena Joy</h3>
                 <div class="about-life">
                     <h2>My Life</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam, autem necessitatibus numquam magnam quasi sunt mollitia.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam,
+                        autem necessitatibus numquam magnam quasi sunt mollitia.</p>
                 </div>
                 <div class="about-work">
                     <h2>My Work</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam, autem necessitatibus numquam magnam quasi sunt mollitia.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam,
+                        autem necessitatibus numquam magnam quasi sunt mollitia.</p>
                 </div>
                 <div class="about-contact">
                     <h2>Contact</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam, autem necessitatibus numquam magnam quasi sunt mollitia.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid ipsa repellendus illo quam,
+                        autem necessitatibus numquam magnam quasi sunt mollitia.</p>
                 </div>
             </div>
         </section>
@@ -71,7 +74,32 @@
             <img src="./img/gallery-3.jpg" alt="lady in tshirt" class="gallery3">
             <img src="./img/gallery-4.jpg" alt="lady in jacket" class="gallery4">
         </section>
+
+        <section class="contact">
+            <div class="form-wrapper flex">
+                <h3>
+                    Get in <br />
+                    <span>
+                        <h4>touch.</h4>
+                    </span>
+                </h3>
+                <form>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email required">
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+            <img src="./img/contact-image.jpg" alt="elena-joy">
+        </section>
     </main>
+    <footer>
+        <h2>Elena Joy &copy; 2023</h2>
+        <ul>
+            <li><a href="#"><img src="./img/youtube-symbol 1.svg" alt="youtube-icon"></a></li>
+            <li><a href="#"><img src="./img/instagram 1.svg" alt="instagram-icon"></a></li>
+            <li><a href="#"><img src="./img/twitter 1.svg" alt="twitter-icon"></a></li>
+        </ul>
+    </footer>
 </body>
 
 </html>
